# Flare

./: .gitignore  Makefile  Makefile.am  Makefile.back1  README.md  configure.ac
apps/: Makefile  coarse_grain.cpp  trend.cpp  yearlypercentchange.cpp  yearlytrend.cpp  yearmean.cpp
docs/: contact.md  index.md
doxygen_docs/: flare.conf
include/: arrayutils.h  constants.h  grid.h  gsm.h  gsm.h~  gvar.h  histogram.h  initializer.h  ncio.h  palettes.h  resource.h  time.h  time_math.h  time_math_2.h  turbulence.h
src/: 1  Makefile  Makefile.am  arrayutils.cpp  arrayutils.cpp~  buffered_vector.tpp  changes.txt  changes.txt~  constants.cpp  globals.cpp  globals.cpp~  grid.cpp  gvar.cpp  gvar.cpp~  histogram.cpp  initializer.cpp  ncio.cpp  opoverloadtest.cpp~  palettes.cpp  pinned_vector.tpp  pncio.cpp  time.cpp  time.cpp~  time_math.cpp
src_cuda/: cuda_device.h  cuda_vector_math.cuh  resource.cu  trend_gpu.cu  turbulence.cu
tests/: Makefile  Makefile.am  buffered_vector_test.cpp  coarse_grain_app_test.cpp  coarse_grain_test.cpp  coarse_grain_test2  coarse_grain_test2.cpp  coarse_grain_test3.cpp  coarse_grain_test4.cpp  coarse_grain_test_pr.cpp  copymeta_test.cpp  correl_nc_and_nc.cpp  correl_txt_and_nc.cpp  createCoordstest.cpp  dates_test.cpp  exec  execution_config.r  fill_test.cpp  gpu_test  gpu_test.cpp  gpu_test.cu  gpu_test2.cu  gtiff_test.cpp  interp_popdens  interp_popdens.cpp  lage_file_test.cpp  lesson.cpp  lesson2.cpp  lterp_test.cpp  mutex_test.cpp  new_gvar.cpp  newcppapi.cpp  opoverloadtest.cpp  pinned_vector_test.cpp  read_test.cpp  resource_test.cpp  reverse_array_test.cpp  reverse_cube_test.cpp  standardize_lons.cpp  streams_test.cpp  (+6 more)
